tests/stderr-snapshots/integration__integration__general__func_inline_const.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: too many function qualifiers
   ┌─ <input>:25:16
   │
25 │         inline const int foo() { return 1; }
   │                ^^^^^ extra qualifier


